docs-archive/apache-airflow-providers-amazon/9.28.0/_sources/_api/tests/system/amazon/aws/example_sagemaker_unified_studio_notebook/index.rst.txt
tests.system.amazon.aws.example_sagemaker_unified_studio_notebook
=================================================================

.. py:module:: tests.system.amazon.aws.example_sagemaker_unified_studio_notebook


Attributes
----------

.. autoapisummary::

   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.DAG_ID
   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.DOMAIN_ID_KEY
   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.PROJECT_ID_KEY
   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.NOTEBOOK_ID_KEY
   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.NOTEBOOK_B_ID_KEY
   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.sys_test_context_task
   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.test_context
   tests.system.amazon.aws.example_sagemaker_unified_studio_notebook.test_run


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_sagemaker_unified_studio_notebook'


.. py:data:: DOMAIN_ID_KEY
   :value: 'DOMAIN_ID'


.. py:data:: PROJECT_ID_KEY
   :value: 'PROJECT_ID'


.. py:data:: NOTEBOOK_ID_KEY
   :value: 'NOTEBOOK_ID'


.. py:data:: NOTEBOOK_B_ID_KEY
   :value: 'NOTEBOOK_B_ID'


.. py:data:: sys_test_context_task

.. py:data:: test_context
   :value: None


.. py:data:: test_run

